2008-05-06  Martin Baulig  <martin@ximian.com>

	Fix #383749.

	* debug-mini.c (mono_debugger_thread_created): Add proper locking.
	(mono_debugger_thread_cleanup): Likewise.
	(mono_debugger_extended_notification): Likewise.

2008-05-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c (mono_method_to_ir): Verify visibility of call related opcodes
	against both inflated and non-inflated methods. We need to check against the
	generic definition for cases where the instantiated method is not visible.
	We need to check against the inflated types for cases where the instantiation
	changes any super type. This fixes #382986.

	Note that this doesn't need to be applied to other parts of mono_method_to_ir
	that check for visibiliy as generic params only appears as the type subject
	of tokens on call opcodes. Field manipulation and ldftn must always
	target an exact type.

2008-05-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* driver.c (mono_main): Using --verify-all enables the verifier under validil mode
	if no related --security flag is passed.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* mini-arch.h: Prepare support for ppc64.

	Contributed under MIT/X11 license.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* aot-runtime.c: Prepare support for ppc64.

	Contributed under MIT/X11 license.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* mini-ops.h: Prepare support for ppc64.

	Contributed under MIT/X11 license.

2008-05-04  Andreas Färber  <andreas.faerber@web.de>

	* helpers.c: Add support for OSX/ppc64 and Linux/ppc64 (dis)assemblers.

	Contributed under MIT/X11 license.

2008-05-03  Zoltan Varga  <vargaz@gmail.com>

	* aot-runtime.c (load_aot_module): Avoid trying to load aot code for dynamic
	assemblies, since aot_name is not a full path, causing us to load MS.NET 
	assemblies on windows.

﻿2008-04-28  Kornél Pál  <kornelpal@gmail.com>

	* mini.c (mono_jit_compile_method_inner): Use g_warning instead of g_error